fix add user
